--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,14 @@ server.port=8080
 
 spring.main.allow-circular-references=true
 
+# Oauth2
+spring.security.oauth2.client.registration.google.client-id=891647264046-ctuohv25qnupe6g0lc7chtvc3jpcrgao.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,email,profile
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
+
+
